gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/staticforeach2.d
version https://git-lfs.github.com/spec/v1
oid sha256:5fb1810f4283af9e290eee36e6be319776996f8ed12f4a107b30c27120f932cd
size 196
